# score-addon-onnx

./: .gitmodules  CMakeLists.txt  README.md  addon.json  init.sh  release.sh  score_addon_my_process.cpp  score_addon_my_process.hpp  score_addon_onnx.cpp  score_addon_onnx.hpp
.github/workflows/: builds.yaml  portability.yml
MyProcess/: CommandFactory.cpp  CommandFactory.hpp  Executor.cpp  Executor.hpp  Inspector.cpp  Inspector.hpp  Layer.hpp  LocalTree.cpp  LocalTree.hpp  Metadata.hpp  Presenter.cpp  Presenter.hpp  Process.cpp  Process.hpp  View.cpp  View.hpp
Onnx/: CommandFactory.cpp  CommandFactory.hpp  Executor.cpp  Executor.hpp  Layer.hpp  Library.hpp  Metadata.hpp  Presenter.cpp  Presenter.hpp  Process.cpp  Process.hpp  View.cpp  View.hpp
Onnx/helpers/: AudioIO.hpp  BlazeFace.hpp  BlazePose.hpp  CoreTypes.hpp  CtxOverlay.hpp  DataIO.hpp  Debug.hpp  Detection.hpp  FaceMesh.hpp  FastVLM.cpp  FastVLM.hpp  GAN.cpp  GAN.hpp  GeometryIO.hpp  ImageBuffer.hpp  ImageModelRole.hpp  ImageOps.cpp  ImageOps.hpp  Images.hpp  MediaPipeHands.hpp  ModelArchetype.hpp  ModelRole.hpp  ModelSpec.hpp  OneEuro.hpp  OnnxBase.hpp  OnnxContext.hpp  PoseTracker.hpp  Profile.hpp  QwenLLM.cpp  QwenLLM.hpp  ROI.hpp  RTMPose.hpp  Resnet.hpp  SkeletonFormats.hpp  TRT.hpp  TensorToTexture.cpp  TensorToTexture.hpp  TensorType.hpp  TokenIO.hpp  Trt.hpp  (+5 more)
Onnx/helpers/compat/: buffer_pool.hpp  dylib_loader.hpp  safe_math.hpp
Onnx/helpers/msvc-compat/: strings.h  unistd.h
Onnx/helpers/msvc-compat/sys/: select.h  stat.h  time.h
OnnxModels/: BlazePose.cpp  BlazePose.hpp  DepthAnything2.cpp  DepthAnything2.hpp  ENet.cpp  ENet.hpp  FastVLM.cpp  FastVLM.hpp  GenerativeImageGAN.cpp  GenerativeImageGAN.hpp  ImageEnums.hpp  ImageToImageGAN.cpp  ImageToImageGAN.hpp  JobPool.hpp  PoseDetector.cpp  PoseDetector.hpp  PoseDetector_detect.cpp  PoseDetector_draw.cpp  PoseDetector_internal.hpp  PoseDetector_landmark.cpp  PoseDetector_tracking.cpp  QwenLLM.cpp  QwenLLM.hpp  RTMPose.cpp  RTMPose.hpp  RealESRGAN.cpp  RealESRGAN.hpp  Resnet.cpp  Resnet.hpp  TRTPose.cpp  TRTPose.hpp  Utils.hpp  YOLO-blob.cpp  YOLO-blob.hpp  YOLO-pose.cpp  YOLO-pose.hpp  YOLO-segmentation.cpp  YOLO-segmentation.hpp
PythonModels/: PromptParser.cpp  PromptParser.hpp  StreamDiffusion.cpp  StreamDiffusion.hpp  StreamDiffusionWrapper.cpp  StreamDiffusionWrapper.hpp  StreamDiffusion_img2img.cpp  StreamDiffusion_img2img.hpp  StreamDiffusion_txt2img.cpp  StreamDiffusion_txt2img.hpp
RapidlibModels/: Classifier.cpp  Classifier.hpp  Regressor.cpp  Regressor.hpp
cmake/: onnxruntime.cmake  python.cmake  rapidlib.cmake
tests/: generic_gan.cpp  generic_gan.hpp  inspect_model.cpp  test_generic_gan.cpp
